# starmoney-python-sdk

./: GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-sdk.yml
examples/: quickstart.py  webhook_handler.py
starmoney/: __init__.py  auth.py  client.py  exceptions.py  http_client.py
starmoney/resources/: __init__.py  accounts.py  beneficiaries.py  payments.py  webhooks.py
starmoney/webhooks/: __init__.py  validator.py
tests/: __init__.py
tests/integration/: __init__.py  test_payment_flow.py
