[tool.poetry]
name = "starmoney-python"
version = "0.1.43"
description = "Official Python SDK for StarMoney Bank API - Ultra-light async client"
authors = ["StarMoney Team <dev@starmoney.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://starmoney.com"
repository = "https://github.com/Cloudymlhub/starmoney-bank-service"
keywords = ["fintech", "payments", "banking", "api", "sdk", "async"]
packages = [{include = "starmoney"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.25.1,<0.26.0"
pydantic = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^24.0"
mypy = "^1.8"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
